[gd_scene load_steps=5 format=3 uid="uid://b031544o71ygh"]

[ext_resource type="Script" path="res://scenes/gameover/gameover_menu.gd" id="1_t6w22"]
[ext_resource type="PackedScene" uid="uid://b2mu6sct6ksdi" path="res://scenes/leaderboard/leaderboard.tscn" id="2_6xt5x"]
[ext_resource type="Theme" uid="uid://sqon6gfgdafv" path="res://assets/UI/Game_Theme.tres" id="3_ujw12"]
[ext_resource type="AudioStream" uid="uid://ctwp8y7tamb42" path="res://assets/sfx_music/button_sfx.wav" id="4_j8ww8"]

[node name="GameOverMenu" type="CanvasLayer"]
script = ExtResource("1_t6w22")

[node name="Leaderboard" parent="." instance=ExtResource("2_6xt5x")]
unique_name_in_owner = true

[node name="GameOver_Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -201.5
offset_top = 40.0
offset_right = 201.5
offset_bottom = 130.0
grow_horizontal = 2
theme = ExtResource("3_ujw12")
theme_override_font_sizes/font_size = 91
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons_Container" type="VBoxContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 75.0
offset_top = -78.0
offset_right = 594.0
offset_bottom = 171.0
grow_vertical = 2
theme = ExtResource("3_ujw12")
theme_override_constants/separation = 80
alignment = 1

[node name="RestartGameButton" type="Button" parent="Buttons_Container"]
layout_mode = 2
text = "Restart Game "

[node name="QuitMainMenuButton" type="Button" parent="Buttons_Container"]
layout_mode = 2
text = "Quit to Main Menu"

[node name="ButtonClick_SFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_j8ww8")
volume_db = 13.509

[connection signal="button_down" from="Buttons_Container/RestartGameButton" to="." method="_on_restart_game_button_button_down"]
[connection signal="pressed" from="Buttons_Container/RestartGameButton" to="." method="_on_restart_game_button_pressed"]
[connection signal="button_down" from="Buttons_Container/QuitMainMenuButton" to="." method="_on_quit_main_menu_button_button_down"]
[connection signal="pressed" from="Buttons_Container/QuitMainMenuButton" to="." method="_on_quit_main_menu_button_pressed"]
